--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
-spring.application.name=vascomm-springboot
+spring.application.name=SamirTaskManagement
 
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/vascomm?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=vascomm
-spring.datasource.password=vascomm
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3309/samir?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta
+spring.datasource.username=samir
+spring.datasource.password=samir
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 springdoc.swagger-ui.path=/
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/rest-api-docs
 
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration,classpath:db/seed
-spring.flyway.enabled=true
-spring.flyway.user=vascomm
-spring.flyway.password=vascomm
+
 
 spring.jackson.deserialization.fail-on-unknown-properties=false
 
