--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SamirTaskManagement
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3309/samir?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3308}/samir?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta
 spring.datasource.username=samir
 spring.datasource.password=samir
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,3 +19,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=false
 spring.jpa.properties.hibernate.jdbc.batch_size=5
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#logging.level.org.springframework.jdbc.datasource=DEBUG
+#logging.level.org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration=DEBUG
+#logging.level.com.zaxxer.hikari=DEBUG
