Add config server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,6 @@
-spring.application.name=SamirTaskManagement
-
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3308}/samir?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta
-spring.datasource.username=samir
-spring.datasource.password=samir
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-springdoc.swagger-ui.path=/
-springdoc.api-docs.enabled=true
-springdoc.api-docs.path=/rest-api-docs
-
-
-
-spring.jackson.deserialization.fail-on-unknown-properties=false
-
-
-spring.jpa.properties.hibernate.jdbc.batch_size=5
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.application.name=task-management
+spring.profiles.active=dev
+spring.config.import=configserver:http://localhost:9999?fail-fast=true&max-attempts=10
 
 #logging.level.org.springframework.jdbc.datasource=DEBUG
 #logging.level.org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration=DEBUG
