--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=task-management
 spring.profiles.active=dev
-spring.config.import=configserver:http://localhost:9999?fail-fast=true&max-attempts=10
+spring.config.import=configserver:${SPRING_CLOUD_CONFIG_URI:-http://localhost:8081?fail-fast=true&max-attempts=10}
 
 #logging.level.org.springframework.jdbc.datasource=DEBUG
 #logging.level.org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration=DEBUG
